# lookup-cli

./: .gitignore  BUILD_INSTRUCTIONS.md  LICENSE  README.md  build.sh  lu  main.py  pyproject.toml
.github/workflows/: build-binaries.yml
app/: __init__.py  cli.py  config.py  i18n.py  translator.py
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
